--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body {
     height:100%;
     width:100%;
     position: absolute;
-    top: 80px;
-    left: 50px;
-    right: 50px;
-    bottom:50px;
-    background-color: rgb(252,252,252);
+    top: 10%;
+    left: 1%;
+    right: 3%;
+    bottom:10%;
+    background-color: #ffe6cc;
 }
 
 .container{
@@ -15,73 +15,34 @@ body {
 
 .column{
   height: 100%;
+  width:33.33%;
   float:left;
   position:relative;
-  margin-left:auto;
-  margin-right:auto;
-}
-
-#MU{
-  width:33.33%;
-}
-
-#cen{
-  width:33.33%;
-  margin-top:-30px;
-  display:table;
-}
-#provider{
-  width:33.33%;
-  margin-top:-50px;
   display:table;
 }
 
 .MUButton{
-  background-color: #ff6600; 
-  border: none;
+  background-color: #ff6600;
+  border-radius: 5px;
+  border-style: groove;
   margin-left:auto;
   margin-right:auto;
-  color: white;
-  top: 100px;
-  max-height:80px;
-  height:100%;
+  margin-top: 10%;
+  margin-bottom:20%;
+  height:10%;
   width:auto;
   min-height:30px;
   display:table;
   text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  margin-bottom:20%;
-}
-
-
-.PRButton{
-  background-color: #404040;   
-  border: none;
-  width:50%;
-  margin-left:auto;
-  margin-right:auto;
-  color: white;
-  padding: 20px 50px;
-  top: 100px;
-  max-height:80px;
-  max-width:180px;
-  min-height:30px;
-  min-width:80px;
-  bottom:100px;
-  display:table;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  margin-bottom:10%;
-}
-
-#P1{
-  margin-top:10%;
 }
 
 .row{
-  vertical-align: middle;
+  margin-bottom:4%;
+  margin-top:4%;
+  font-family: arial;
+  font-size: 14px;
+  color:white;
+  text-align: left
 }
 
 .bulb {
@@ -93,20 +54,12 @@ body {
   margin-right:0px;
 }
 
-.row{
-  font-family: arial;
-  font-size: 14px;
-  color:white;
-  text-align: left;
-
-}
-
 #cout{
-  margin:40px auto;
+  margin:10% 5%;
   border-style:solid;
-  border-width:5px;
+  border-width:1%;
   border-color: red;
-  height: 200px;
+  height: 30%;
   width:auto; 
 }
 
@@ -115,12 +68,15 @@ body {
   display:table;
 }
 .PRLabel{
-  background-color: #404040;   
-  border: none;
+  background-color: black;   
+  border-radius: 14px;
   width:120px;
   margin-left:auto;
   margin-right:auto;
-  color: white;
+  color: RGB(230,230,230);
+  height:5%;
+  font-family: Arial;
+  font-weight:bold;
   display:table;
   text-align: center;
   text-decoration: none;
@@ -128,22 +84,23 @@ body {
 }
 
 .logoPr{
-  border: none;
   border-radius: 5px;
   margin-left:auto;
   margin-right:auto;
   width:20%;
   height:auto;
+  background-color: white;
   color: white;
   display:table;
   text-align: center;
-  text-decoration: none;
+  vertical-align: middle;
   font-size: 16px;
+  margin-top:10%;
   margin-bottom:10%;
 }
 
 .acceptButton{
-  background-color: green; 
+  background-color: grey; 
   border-radius: 5px;
   border: none;
   color: white;
@@ -152,8 +109,15 @@ body {
   margin-bottom:10%;
 }
 
+.acceptButton:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+
 .rejectButton{
-  background-color: red;
+  background-color: grey;
   border: none;
   border-radius: 5px;
   display:inline;
@@ -161,4 +125,11 @@ body {
   text-decoration: none;
   font-size: 14px;
   margin-bottom:10%;
+  -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.rejectButton:hover {
+    background-color: #ff0000; /* Green */
+    color: white;
 }
