--- a/web/stylesheet/style.css
+++ b/web/stylesheet/style.css
@@ -1,12 +1,12 @@
 body {
-  	height:100%;
-  	width:100%;
-  	position: absolute;
-  	top: 80px;
-  	left: 50px;
-  	right: 50px;
-  	bottom:50px;
-  	background-color: rgb(252,252,252);
+    height:100%;
+    width:100%;
+    position: absolute;
+    top: 10%;
+    left: 1%;
+    right: 3%;
+    bottom:10%;
+    background-color: #ffe6cc;
 }
 
 .container{
@@ -14,79 +14,37 @@ body {
 }
 
 .column{
-	height: 100%;
-	float:left;
-	position:relative;
-	margin-left:auto;
-	margin-right:auto;
-}
-
-#MU{
-	width:33.33%;
-}
-
-#cen{
-	width:33.33%;
-  top:-50px;
+  height: 100%;
+  width:33.33%;
+  float:left;
+  position:relative;
   display:table;
-}
-#provider{
-	float:left;
-	width:33.33%;
-	display:table;
-	position:relative;
 }
 
 .MUButton{
-	background-color: #ff6600; 
-    border: none;
-    margin-left:auto;
-    margin-right:auto;
-    color: white;
-    top: 100px;
-    max-height:80px;
-    height:100%;
-    width:auto;
-    min-height:30px;
-    bottom:100px;
-    display:table;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    margin-bottom:10%;
-}
-#MachineA{
-	margin-top:10%;
-}
-
-.PRButton{
-	background-color: #404040;   
-	border: none;
-    width:50%;
-    margin-left:auto;
-	margin-right:auto;
-    color: white;
-    padding: 20px 50px;
-    top: 100px;
-    max-height:80px;
-    max-width:180px;
-    min-height:30px;
-    min-width:80px;
-    bottom:100px;
-    display:table;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    margin-bottom:10%;
-}
-
-#P1{
-	margin-top:10%;
+  background-color: #ff6600;
+  border-radius: 5px;
+  border-style: groove;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 10%;
+  margin-bottom:20%;
+  height:10%;
+  width:auto;
+  min-height:30px;
+  display:table;
+  text-align: center;
 }
 
 .row{
-  vertical-align: middle;
+  margin-bottom:4%;
+  margin-top:4%;
+  font-family: arial;
+  font-size: 14px;
+  color:white;
+  text-align: left
 }
+
 .bulb {
   height: 15px;
   width: 15px;
@@ -94,21 +52,99 @@ body {
   border-radius: 70%;
   margin: 4px auto;
   margin-right:0px;
-}
-
-.row{
-  font-family: arial;
-  font-size: 14px;
-  color:white;
-  text-align: left;
-
+  margin-bottom:5px;
 }
 
 #cout{
-  margin:40px auto;
+  margin:10% 5%;
   border-style:solid;
-  border-width:5px;
+  border-width:1%;
   border-color: red;
-  height: 200px;
+  height: 30%;
   width:auto; 
+}
+
+.providerUI{
+  width:100%;
+  display:table;
+}
+.PRLabel{
+  background-color: black;   
+  border-radius: 14px;
+  width:120px;
+  margin-left:auto;
+  margin-right:auto;
+  color: RGB(230,230,230);
+  height:5%;
+  font-family: Arial;
+  font-weight:bold;
+  display:table;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.logoPr{
+  border-radius: 100px;
+  margin-left:auto;
+  margin-right:auto;
+  width:20%;
+  height:auto;
+  background-color: white;
+  color: white;
+  display:table;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 16px;
+  margin-top:10%;
+  margin-bottom:10%;
+}
+
+.acceptButton{
+  visibility:hidden;
+  background-color: grey; 
+  border-radius: 5px;
+  border: none;
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  margin-bottom:10%;
+}
+
+.acceptButton:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+
+.rejectButton{
+  visibility:hidden;
+  background-color: grey;
+  border: none;
+  border-radius: 5px;
+  display:inline;
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  margin-bottom:10%;
+  -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.rejectButton:hover {
+  background-color: #ff0000; /* Green */
+  color: white;
+}
+
+.notif{
+  text-align:center;
+  font-family:Arial;
+  font-size:14px;
+  visibility:hidden;
+}
+
+.sprite{
+  overflow:hidden;
+  position:absolute;
 }
