--- a/web/stylesheet/style.css
+++ b/web/stylesheet/style.css
@@ -37,8 +37,7 @@ body {
 }
 
 .row{
-  margin-bottom:4%;
-  margin-top:4%;
+  margin-bottom:5px;
   font-family: arial;
   font-size: 14px;
   color:white;
